# idle-runner

./: README  README.md  meson.build
data/: idle-runner-autostart.desktop  idle-runner-cfg.desktop  idle-runner.service  meson.build  org.webster.idlerunner.gschema.xml
debian/: changelog  control  idle-runner.install  rules
src/: idle-runner-config.py  idle-runner.glade  idle-runner.py  meson.build
